fix mobile text align

--- a/main.css
+++ b/main.css
@@ -14,9 +14,9 @@ html {
     letter-spacing: 1.1px;
 }
 
-@media (max-width: 414px) {
-    .menu {
-        padding-left: 10px;
+@media (max-width: 425px) {
+    #intro {
+        text-align: center;
     }
 }
 
